--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "CC0-1.0",
   "author": "Rob Eisenberg <rob@bluespire.com> (http://robeisenberg.com/)",
   "main": "dist/commonjs/index.js",
+  "typings": "dist/commonjs/index.d.ts",
   "repository": {
     "type": "git",
     "url": "http://github.com/aurelia/skeleton-plugin"
@@ -52,6 +53,9 @@
     "preprepare-release": "cross-env npm run test",
     "prepare-release": "cross-env npm run changelog && npm run build && npm run doc"
   },
+  "dependencies": {
+    "aurelia-framework": "^1.1.2"
+  },
   "devDependencies": {
     "@types/jasmine": "^2.5.53",
     "@types/node": "^8.0.6",
@@ -78,16 +82,17 @@
   },
   "jspm": {
     "registry": "npm",
+    "jspmPackage": true,
     "main": "index",
     "format": "amd",
     "directories": {
       "dist": "dist/amd"
     },
-    "devDependencies": {
-      "aurelia-polyfills": "^1.0.0"
+    "peerDependencies": {
+      "aurelia-framework": "^1.1.2"
+    },
+    "dependencies": {
+      "aurelia-framework": "^1.1.2"
     }
-  },
-  "dependencies": {
-    "aurelia-framework": "^1.1.2"
   }
 }
